2023-03-31 Jan Kotanski <jan.kotanski@desy.de>
	* enlarge GLOBALREFRESHTIME when it is too small
	* change GLOBALREFRESHRATE  to GLOBALREFRESHTIME
	* add auto enlarge refresh time configuration variable
	* tagged as 2.82.0

2023-01-25 Jan Kotanski <jan.kotanski@desy.de>
	* use warnings instead of numpy.warnings
	* tagged as 2.81.1

2023-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* add default and signal attributes to Raw NeXus exporter (#689)
	* fix for crashing exportg dialog in pyqtgraph (>= 0.12.0) (#687)
	* tagged as 2.81.0

2023-01-02 Jan Kotanski <jan.kotanski@desy.de>
	* fix for crashing config dialog in python 3.10
	* remove overflowColorCheckBox from the configuration
	* tagged as 2.80.1

2022-12-20 Jan Kotanski <jan.kotanski@desy.de>
	* add overflow value widget
	* set the hidra log level from the lavue log level
	* hide non-used actions from plot menus
	* tagged as 2.80.0

2022-12-20 Jan Kotanski <jan.kotanski@desy.de>
	* add settings for the high value mask color
	* tagged as 2.79.0

2022-11-17 Jan Kotanski <jan.kotanski@desy.de>
	* adapt the code to pyqtgrath (>=0.13.0)
	* tagged as 2.78.0

2022-11-17 Jan Kotanski <jan.kotanski@desy.de>
	* update default hidra server list
	* improve getting image synchronization
	* tagged as 2.77.0

2022-08-30 Jan Kotanski <jan.kotanski@desy.de>
	* fix misspell in the norm widget
	* tagged as 2.76.1

2022-07-25 Jan Kotanski <jan.kotanski@desy.de>
	* use qtwebengine to display help in the newer versions of pyqt5
	* tagged as 2.76.0

2022-07-25 Jan Kotanski <jan.kotanski@desy.de>
	* bump the version to build the wheel
	* tagged as 2.75.4

2022-07-19 Jan Kotanski <jan.kotanski@desy.de>
	* add missing js files to help
	* tagged as 2.75.3

2022-07-19 Jan Kotanski <jan.kotanski@desy.de>
	* catch diffractogram tool exceptions
	* tagged as 2.75.2

2022-05-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix typo in the scale description
	* tagged as 2.75.1

2022-05-20 Jan Kotanski <jan.kotanski@desy.de>