@@ -19,7 +19,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="pickleLabel">
        <property name="toolTip">
-        <string>zmq server, port and topic, hwm (optional): server:port[/topic][/hwm]
+        <string>zmq server, port and topic, hwm (optional): server:port[:topic][:hwm]
 e.g. haso228:9999/10001 or :5553</string>
        </property>
        <property name="text">
@@ -50,7 +50,7 @@ e.g. haso228:9999/10001 or :5553</string>
      <item row="0" column="1">
       <widget class="QComboBox" name="pickleComboBox">
        <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;zmq server, port and topic, hwm (optional): server:port[/topic][/hwm]&lt;/p&gt;&lt;p&gt;e.g. haso228:9999/10001 or :5553&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;zmq server, port and topic, hwm (optional): server:port[:topic][:hwm]&lt;/p&gt;&lt;p&gt;e.g. haso228:9999/10001 or :5553&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="editable">
         <bool>true</bool>
